<resources>
    <string name="app_name">MP_TermProject</string>
    <string name="sample_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="woo_tae_gye">Woo Tae Gyeong</string>
    <string name="some_id">보유상금</string>
    <string name="p">37,000 P</string>
    <!-- strings.xml -->
    <string name="profile_edit">프로필 수정</string>
    <string name="profile">Profile</string>
    <string name="some_id1">+91 321321</string>
    <string name="some_id2">david5452@naver.com</string>
    <string name="home">Home</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="message">Message</string>
    <string name="promotion">Promotion</string>
    <string name="now">now</string>
    <string name="min_ago3"> 3min ago</string>
    <string name="min_ago12">12 min ago</string>
    <string name="hour_ago3">3 hour ago</string>
    <string name="command_for">command for</string>
    <string name="nd_in_labe_">3nd in labe-contest</string>
    <string name="a_new_recom">a new recommendation contest</string>
</resources>