<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <ImageView
        android:id="@+id/group_74"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="#00000000"
        android:src="@drawable/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129" />

    <TextView
        android:id="@+id/profile"
        android:layout_width="148dp"
        android:layout_height="52dp"
        android:text="@string/profile"
        android:textAppearance="@style/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="116dp"
        android:scaleType="centerCrop"
        android:src="@drawable/rectangle42_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/my_name"
        android:layout_width="157dp"
        android:layout_height="24dp"
        android:layout_marginTop="80dp"
        android:textAppearance="@style/woo_tae_gye2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.685"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/my_money"
        android:layout_width="84dp"
        android:layout_height="24dp"
        android:layout_marginTop="128dp" android:textAppearance="@style/p_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/some_id"
        android:layout_width="80dp"
        android:layout_height="24dp"
        android:layout_marginTop="128dp"
        android:text="@string/some_id"
        android:textAppearance="@style/some_id_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="192dp"
        android:scaleType="centerCrop"
        android:src="@drawable/rectangle63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 프로필 수정 -->
    <TextView
        android:id="@+id/profile_edit"
        android:layout_width="123dp"
        android:layout_height="28dp"
        android:layout_marginTop="204dp"
        android:text="@string/profile_edit"
        android:textAppearance="@style/profile_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/change_name"
        android:layout_width="100dp"
        android:layout_height="24dp"
        android:layout_marginTop="248dp"
        android:background="#00ff0000"
        android:text="닉네임 변경"
        android:textAppearance="@style/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="100dp"
        android:layout_height="24dp"
        android:layout_marginTop="320dp"

        android:text="프로필사진 변경"
        android:textAppearance="@style/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#00ff0000"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/change_pass"
        android:layout_width="100dp"
        android:layout_height="24dp"
        android:layout_marginTop="284dp"
        android:background="#00ff0000"
        android:text="비밀번호 변경"
        android:textAppearance="@style/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="540dp"
        android:scaleType="centerCrop"
        android:src="@drawable/rectangle63_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="100dp"
        android:layout_height="24dp"
        android:layout_marginTop="424dp"
        android:background="#00ff0000"
        android:text="내가 쓴 글보기"
        android:textAppearance="@style/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="131dp"
        android:layout_height="20dp"
        android:layout_marginTop="468dp"
        android:background="#00ff0000"
        android:text="내가 남긴 댓글 보기"
        android:textAppearance="@style/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:layout_width="124dp"
        android:layout_height="30dp"
        android:layout_marginTop="384dp"
        android:text="내 글 보기"
        android:textAppearance="@style/profile_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="380dp"
        android:scaleType="centerCrop"
        android:src="@drawable/rectangle63_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:layout_width="119dp"
        android:layout_height="33dp"
        android:layout_marginTop="552dp"
        android:text="상금 관리"
        android:textAppearance="@style/profile_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="131dp"
        android:layout_height="20dp"
        android:layout_marginTop="592dp"
        android:background="#00ff0000"
        android:text="연결 계좌 관리"
        android:textAppearance="@style/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="152dp"
        android:layout_height="22dp"
        android:layout_marginTop="624dp"
        android:background="#00ff0000"
        android:text="내가 획득한 상금 보기"
        android:textAppearance="@style/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>